--- a/simpleExamples/index.html
+++ b/simpleExamples/index.html
@@ -11,7 +11,7 @@
   <script src="exampleXML.js" ></script>
   <script src="exampleFetch.js" ></script>
   <script src="exampleCORS.js" ></script>
-  <script src="exampleAxios.js" ></script>
+  <!--script src="exampleAxios.js" ></script-->
   <script src="exampleJSON.js"></script>
 </body>
 </html>
