--- a/postsExample/index.html
+++ b/postsExample/index.html
@@ -72,6 +72,6 @@
       </div>
     </div>
   </main>
-  <script src="examples4.js" ></script>
+  <script src="example.js" ></script>
 </body>
 </html>
