--- a/postsExample/index.html
+++ b/postsExample/index.html
@@ -56,6 +56,10 @@
             Блокирует
             <input value="2" type="radio" name="type" id="sync">
           </label>
+          <label>
+             Кол-во постов
+            <input type="number" placeholder="0" id="numPost">
+          </label>
           <div class="status"></div>
         </div>
         <div class="header-button">
@@ -68,6 +72,9 @@
         <!-- Тут будут отрисованы прямоугольники -->
       </div>
       <div class="data-wraper">
+        <!-- Тут будут отрисованы посты из запроса -->
+      </div>
+      <div class="bots-wraper">
         <!-- Тут будут отрисованы посты из запроса -->
       </div>
     </div>
