--- a/postsExample/index.html
+++ b/postsExample/index.html
@@ -56,6 +56,7 @@
             Блокирует
             <input value="2" type="radio" name="type" id="sync">
           </label>
+          <input type="text" placeholder="Число постов" class="posts-number">
           <div class="status"></div>
         </div>
         <div class="header-button">
