--- a/simpleExamples/index.html
+++ b/simpleExamples/index.html
@@ -10,8 +10,8 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="exampleXML.js" ></script>
   <script src="exampleFetch.js" ></script>
-  <script src="exampleCORS.js" ></script>
+  <!-- <script src="exampleCORS.js" ></script> -->
   <!--script src="exampleAxios.js" ></script-->
-  <script src="exampleJSON.js"></script>
+  <!-- <script src="exampleJSON.js"></script> -->
 </body>
 </html>
