--- a/simpleExamples/index.html
+++ b/simpleExamples/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="exampleXML.js" ></script>
-  <script src="exampleFetch.js" ></script>
-  <script src="exampleCORS.js" ></script>
-  <!--script src="exampleAxios.js" ></script-->
-  <script src="exampleJSON.js"></script>
+  <!-- <script src="exampleXML.js" ></script> -->
+  <!-- <script src="exampleFetch.js" ></script> -->
+  <!-- <script src="exampleCORS.js" ></script>
+  <script src="exampleAxios.js" ></script>
+  <script src="exampleJSON.js"></script> -->
+  <script src="exampleXML.js"></script>
 </body>
 </html>
