--- a/postsExample/index.html
+++ b/postsExample/index.html
@@ -59,9 +59,9 @@
           <div class="status"></div>
         </div>
         <div class="header-button">
-          <button class="action-button">
-            Start
-          </button>
+            <p>Введите количество постов<br>От 1 до 10</p>
+            <input id = "userID" type="text">
+            <button id = "PostButton">Отправить</button>
         </div>
       </div>
       <div class="rectangles-wraper">
