--- a/simpleExamples/index.html
+++ b/simpleExamples/index.html
@@ -30,6 +30,14 @@
         margin-left: 100px;
     }
 
+    #counter {
+      margin-top: 25px;
+        font-size: 25px;
+        height: 100%;
+        width: 100%;
+        margin-left: 100px;
+    }
+
     form {
       margin-top: 25px;
         margin-left: 125px;
@@ -43,6 +51,7 @@
             <input type="text" id = "userID"><br>
             <button id = "ButtonValue" type="button" class= "btn btn-primary">Отправить</button>
         </form>
+    <div id = "counter"></div>
     <div id = "input"></div>
 </div>  
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
