--- a/postsExample/index.html
+++ b/postsExample/index.html
@@ -58,7 +58,7 @@
             <input value="2" type="radio" name="type" id="sync">
           </label>
           <p><b>Введите номер поста (1-10):</b><br>
-            <input type="text" size="10" id="id">
+            <input type="text" size="10" id="numPost">
            </p>
           <div class="status"></div>
         </div>
